<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_home_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/home_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mid_title"
        android:gravity="center"
        android:text="@string/test_aidl"
        app:layout_constraintBottom_toTopOf="@id/tv_get_book_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_get_book_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_hint"
        android:text="@string/get_book_list" />

    <TextView
        android:id="@+id/tv_add_book_inOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_book_list"
        android:text="@string/add_book" />

    <TextView
        android:id="@+id/tv_book_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintStart_toEndOf="@id/tv_add_book_inOut"
        app:layout_constraintTop_toTopOf="@id/tv_get_book_list"/>

    <TextView
        android:id="@+id/tv_test_arouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_arouter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_switch_doraemon"/>

    <TextView
        android:id="@+id/tv_switch_doraemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/open_float_window"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>